# rhodos

./: .gitignore  AUTHORS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
config/: rhodos.ini  rhodos.ini.sample
migrations/2022-11-23-090018_create_account/: up.sql
migrations/2022-11-23-091354_create_content/: up.sql
scripts/: init_db.sh  init_mail.sh  init_redis.sh
src/: authentication.rs  cookies.rs  db.rs  email_client.rs  error.rs  lib.rs  migration.rs  orm.rs  scopes.rs  session_state.rs  settings.rs  smtp_client.rs  startup.rs  telemetry.rs
src/auth/: mod.rs  sea_orm_store.rs
src/db/: models.rs  schema.rs
src/domain/: client_id.rs  client_secret.rs  mod.rs  new_user.rs  random_value.rs  user_email.rs  user_id.rs  user_name.rs  user_role.rs
src/entities/: account.rs  client_app.rs  client_authorization.rs  content.rs  instance.rs  microblog.rs  mod.rs  prelude.rs  user.rs  user_token.rs
src/migrator/: m20220101_000001_create_trigger.rs  m20220101_000002_create_trigger.rs  m20220101_000003_create_account.rs  m20220101_000003_create_user.rs  m20220101_000004_create_account.rs  m20220101_000004_create_content.rs  m20220101_000005_create_content.rs  m20220101_000005_create_instance.rs  m20220101_000006_create_instance.rs  m20220101_000006_create_microblog.rs  m20220101_000007_create_user.rs  m20220101_000008_create_user_token.rs  m20220101_000009_create_admin.rs  m20230101_000001_create_client_app.rs  m20230101_000002_create_client_authorization.rs  mod.rs
src/oauth/: solicitor.rs
src/oauth/database/: mod.rs
src/oauth/database/resource/: client.rs  user.rs
src/oauth/models/: client.rs  mod.rs
src/oauth/primitives/: registrar.rs
src/oauth/routes/: mod.rs  oauth.rs  signin.rs
src/routes/: axum_login_user.rs  content.rs  health_check.rs  index.rs  middleware_message.rs  mod.rs  test.rs  user.rs  user_confirm.rs  xauth.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/api/: apps.rs  mod.rs
src/routes/content/: content.html  get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/index/: index.html  mod.rs
src/routes/login/: get.rs  post.rs
src/routes/user/: confirm.rs  create.rs  logout.rs  mod.rs
src/routes/user/change_password/: get.rs  mod.rs  post.rs
tests/: health_check.rs  settings.rs
tests/api/: admin_dashboard.rs  content.rs  email_client.rs  health_check.rs  helpers.rs  home_dashboard.rs  index.rs  login.rs  logout.rs  main.rs  migration.rs  password_reset.rs  settings.rs  test_utils.rs  user.rs  user_confirm.rs
tests/api/content/: get.rs  mod.rs  post.rs  post_form.rs
tests/api/mastodon_api/: apps.rs  mod.rs  oauth.rs
tests/config_files/: email_outgoing_00.ini  ssl_mode_uri_string_00.ini  test_db_password_override_from_env_file.ini  test_ssl_mode_00.ini  test_ssl_mode_01.ini  test_ssl_mode_02.ini  test_ssl_mode_panic_00.ini
