[package]
name = "rhodos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "librhodos"
path = "src/lib.rs"

[[bin]]
name = "rhodos"
path = "src/bin/bin.rs"

[dependencies]
axum = { version = "0.6.0", features = ["headers"] }
axum-macros = "0.3.0"
chrono = "~0.4"
config = "0.13.2"
docopt = "1"
dotenvy = "0.15"
futures = "0.3.25"
reqwest = "0.11.13"
sea-orm = { version = "0.10.4", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = "0.10.4"
serde = { version = "1", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.7.0"
tokio = { version = "1.22.0", features = ["full", "rt-multi-thread"] }
validator = "0.16.0"
