[package]
name = "rhodos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "librhodos"
path = "src/lib.rs"

[[bin]]
name = "rhodos"
path = "src/bin/bin.rs"

[dependencies]
axum = { version = "0.6.0", features = ["headers"] }
axum-macros = "0.3.0"
chrono = "~0.4"
config = "0.13.2"
docopt = "1"
dotenvy = "0.15"
futures = "0.3.25"
lettre = "0.10.1"
reqwest = "0.11.13"
sea-orm = { version = "0.10.4", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = "0.10.4"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full", "rt-multi-thread"] }
tokio-postgres = "0.7.7"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1.2.2", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
fake = "2.5.0"
once_cell = "1"
