[package]
name = "rhodos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "librhodos"
path = "src/lib.rs"

[[bin]]
name = "rhodos"
path = "src/bin/bin.rs"

[dependencies]
anyhow = "1.0.66"
argon2 = { version = "0.4.1", features = ["std"] }
axum = { version = "0.6.0", features = ["headers"] }
axum-macros = "0.3.0"
base64 = "0.20.0"
chrono = "~0.4"
config = "0.13.2"
docopt = "1"
dotenvy = "0.15"
futures = "0.3.25"
lettre = "0.10.1"
rand = { version = "0.8.5", features = ["std_rng"] }
sea-orm = { version = "0.10.4", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = "0.10.4"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1.2.2", features = ["v4"] }
validator = "0.16.0"
cookie = "0.16.2"
tower-cookies = { version = "0.8.0", features = ["private", "signed"] }
once_cell = "1.16.0"
async-redis-session = "0.2.2"
serde_json = "1.0.89"
axum-login = "0.4.1"
eyre = "0.6.8"
axum-sessions = "0.4.1"
nanoid = "0.4.0"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
fake = "2.5.0"
linkify = "0.9.0"
mail-parser = "0.8.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde-aux = "4.1.2"
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["macros"] }
tempfile = "3.3.0"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
urlencoding = "2.1.2"
